# osmordred-community

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  setup_env.sh
.github/workflows/: ci.yaml
scripts/: provision_rdkit_headers.sh
