[build-system]
requires = ["setuptools", "wheel", "scikit-build", "numpy>=1.26.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osmordred-community"
version = "0.2.0"
description = "Community-maintained unified RDKit descriptors in C++ — 0D, 1D, 2D molecular descriptors"
requires-python = ">=3.11.8"
authors = [{name = "Guillaume Godin", email = "guillaume.godin@gmail.com"}]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
