[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "osmordred"
version = "0.1.0"
description = "osmordred-community"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "rdkit",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"